WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
118753
Typo in DFGInsertionSet.h header guard: "DFGInsectionSet_h" -> "DFGInsertionSet_h"
https://bugs.webkit.org/show_bug.cgi?id=118753
Summary
Typo in DFGInsertionSet.h header guard: "DFGInsectionSet_h" -> "DFGInsertionS...
David Farler
Reported
2013-07-16 16:18:02 PDT
DFGInsertionSet.h: 26 #ifndef DFGInsertionSet_h 27 #define DFGInsectionSet_h Found this with trunk clang [-Wheader-guard] In file included from /webkit/OpenSource/Source/JavaScriptCore/dfg/DFGDCEPhase.cpp:33: /webkit/OpenSource/Source/JavaScriptCore/dfg/DFGInsertionSet.h:26:9: error: 'DFGInsertionSet_h' is used as a header guard here, followed by #define of a different macro [-Werror,-Wheader-guard] #ifndef DFGInsertionSet_h ^~~~~~~~~~~~~~~~~ /webkit/OpenSource/Source/JavaScriptCore/dfg/DFGInsertionSet.h:27:9: note: 'DFGInsectionSet_h' is defined here; did you mean 'DFGInsertionSet_h'? #define DFGInsectionSet_h ^~~~~~~~~~~~~~~~~ DFGInsertionSet_h 1 error generated.
Attachments
Patch
(1.14 KB, patch)
2013-07-16 16:20 PDT
,
David Farler
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Farler
Comment 1
2013-07-16 16:20:21 PDT
Created
attachment 206824
[details]
Patch
Geoffrey Garen
Comment 2
2013-07-16 16:22:22 PDT
Comment on
attachment 206824
[details]
Patch r=me
David Farler
Comment 3
2013-07-16 16:23:10 PDT
Committed
r152747
: <
http://trac.webkit.org/changeset/152747
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug